--- a/02_tipos_de_dados.ipynb
+++ b/02_tipos_de_dados.ipynb
@@ -20,6 +20,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7ff1e06",
+   "metadata": {},
+   "source": [
+    "🔎 Tipos de Dados em Python\n",
+    "\n",
+    "Este repositório apresenta exemplos práticos sobre tipos de dados em Python.  \n",
+    "Saber identificar e manipular tipos de dados é essencial em Análise de Dados, já que cada operação exige um tipo específico.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "📌 Por que é importante conhecer os tipos de dados?\n",
+    "\n",
+    "1. Evitar erros: operações só podem ser feitas entre tipos compatíveis.  \n",
+    "   - Exemplo: somar `int + float` é possível, mas `int + str` gera erro.  \n",
+    "\n",
+    "2. Otimizar código: escolher o tipo correto ajuda na performance.  \n",
+    "\n",
+    "3. Garantir consistência: em bases de dados, precisamos saber se uma coluna é `numérica`, `categórica`, `boolean` ou `string` antes da análise.  \n",
+    "\n",
+    "4. Tratar dados ausentes: o tipo `None` em Python (ou `NaN` em pandas) precisa ser identificado para evitar distorções em cálculos.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "📊 Exemplos de Tipos de Dados\n",
+    "\n",
+    "- int → números inteiros  \n",
+    "- float → números decimais  \n",
+    "- str → textos (strings)  \n",
+    "- bool → valores lógicos (`True` ou `False`)  \n",
+    "- list → coleção mutável de elementos  \n",
+    "- tuple → coleção imutável de elementos  \n",
+    "- dict → dicionário (pares chave:valor)  \n",
+    "- set → conjunto sem duplicatas  \n",
+    "- NoneType → ausência de valor  \n",
+    "\n",
+    "---\n",
+    "\n",
+    " 🚀 Como executar\n",
+    "\n",
+    "No terminal, rode:\n",
+    "\n",
+    "```bash\n",
+    "python tipos_dados.py\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "87afcd4b",
